Change intro paragraph h1 corrected

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <figcaption>Photo credits: JK Selfiestick</figcaption> -->
       </div>
       <div class="profile__item">
-        <h1>Hello <span style="text-edcoration:strike-though;">World</span>there!</h1>
+        <h1>Hello <span style="text-decoration:line-through;">World</span> there!</h1>
         <h2>My name is Johannes Kr&auml;mer.</h2>
         <h3>I am a <span><em>web</em></span> developer from Berlin.</h3>
         <a href="work.html" id="button">Check out my current projects</a>
