Update global page footer with social media deep links

--- a/contact.html
+++ b/contact.html
@@ -79,9 +79,9 @@
     <!-- No deep links to social accounts implemented yet but colors tweaked manually to practice svg implementation -->
     <p>Find me as <span class="socials-footer">#jkraemr</span> on</p>
     <div class="social-media">
-      <a href="https://github.com/" target="_blank"><img src="./img/github-logo.svg" width="22" alt="GitHub Logo"></a>
-      <a href="https://www.linkedin.com/" target="_blank"><img src="./img/linked-in-logo.svg" width="25" alt="LinkedIn Logo"></a>
-      <a href="https://twitter.com/" target="_blank"><img src="./img/twitter-logo.svg" width="23" alt="Twitter Logo"></a>
+      <a href="https://github.com/jkraemr" target="_blank"><img src="./img/github-logo.svg" width="22" alt="GitHub Logo"></a>
+      <a href="https://www.linkedin.com/in/johannes-kraemer/" target="_blank"><img src="./img/linked-in-logo.svg" width="25" alt="LinkedIn Logo"></a>
+      <a href="https://twitter.com/jkraemr" target="_blank"><img src="./img/twitter-logo.svg" width="23" alt="Twitter Logo"></a>
     </div>
   </footer>
 
