Update footer description

--- a/about.html
+++ b/about.html
@@ -1422,7 +1422,7 @@
 
   <footer class="page-footer">
     <!-- No deep links to social accounts implemented yet but colors tweaked manually to practice svg implementation -->
-    <p>Find me as <span class="socials-footer">#jkraemr</span> on</p>
+    <p>Find me <span class="socials-footer">@jkraemr</span> on</p>
     <div class="social-media">
       <a href="https://github.com/jkraemr" target="_blank"><img src="./img/github-logo.svg" width="22" alt="GitHub Logo"></a>
       <a href="https://www.linkedin.com/in/johannes-kraemer/" target="_blank"><img src="./img/linked-in-logo.svg" width="25" alt="LinkedIn Logo"></a>
