--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="profile__item">
         <h1>Hello <span style="text-decoration:line-through;">world</span> there!</h1>
         <h2>My name is Johannes Kr&auml;mer.</h2>
-        <h3>I am a <span><em>web</em></span> developer from Berlin.</h3>
+        <h3>I am a <span><em>front-end</em></span> web developer based in Berlin.</h3>
         <a href="work.html" id="button">Check out my current projects</a>
         <br><br>
         <a href="contact.html" id="button__secondary">Get in touch</a>
@@ -58,7 +58,7 @@
 
   <footer class="page-footer">
     <!-- No deep links to social accounts implemented yet but colors tweaked manually to practice svg implementation -->
-    <p>Find me as <span class="socials-footer">#jkraemr</span> on</p>
+    <p>Find me <span class="socials-footer">@jkraemr</span> on</p>
     <div class="social-media">
       <a href="https://github.com/jkraemr" target="_blank"><img src="./img/github-logo.svg" width="22" alt="GitHub Logo"></a>
       <a href="https://www.linkedin.com/in/johannes-kraemer/" target="_blank"><img src="./img/linked-in-logo.svg" width="25" alt="LinkedIn Logo"></a>
