--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
       <div class="profile__item">
         <h1>Hello <span style="text-decoration:line-through;">world</span> there!</h1>
         <h2>My name is Johannes Kr&auml;mer.</h2>
-        <h3>I am a <span><em>front-end</em></span> web developer based in Berlin.</h3>
-        <a href="work.html" id="button">Check out my current projects</a>
+        <h3>I am a <em>web</em> developer based in Berlin.</h3>
+        <a href="work.html" id="button">Check out my latest projects</a>
         <br><br>
-        <a href="contact.html" id="button__secondary">Get in touch</a>
+        <a href="contact.html" id="button__secondary">Contact Me</a>
 
       </div>
     </div>
