Add h1 with page title

--- a/work.html
+++ b/work.html
@@ -37,7 +37,7 @@
 
   <main>
 
-    <section>
+    <section class="work-main">
       <h1>Work</h1>
       <div class="work-grid">
         <div class="work-grid__item">
