Remove links to PDF downloads

--- a/about.html
+++ b/about.html
@@ -48,18 +48,18 @@
 
             <h3>HTML5</h3>
 
-            <a href="files/CCA-Certificate-HTML-Level-1.pdf" target="_blank"><img src="img/HTMLLevel1.png" class="cca-logo-button" alt="Logo of CCA Cambridge Certification Association"></a>
+            <a href="#" target="_blank"><img src="img/HTMLLevel1.png" class="cca-logo-button" alt="Logo of CCA Cambridge Certification Association"></a>
 
             <h3>CCS3</h3>
 
-            <a href="files/CCA-Certificate-CSS-Level-1.pdf" target="_blank"><img src="img/CSSLevel1.png" class="cca-logo-button" alt="Logo of CCA Cambridge Certification Association"></a>
+            <a href="#" target="_blank"><img src="img/CSSLevel1.png" class="cca-logo-button" alt="Logo of CCA Cambridge Certification Association"></a>
 
           </div>
 
 
           <br><br>
 
-          <a href="files/Johannes-Kraemer-Resume-Short.pdf" id="button">Download my full resume</a>
+          <a href="#" id="button">Download my full resume</a>
           </div>
           <div class="about-flex__item">
             <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="auto" viewbox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
