Remove link target attributes from CCA links

--- a/about.html
+++ b/about.html
@@ -48,11 +48,11 @@
 
             <h3>HTML5</h3>
 
-            <a href="#" target="_blank"><img src="img/HTMLLevel1.png" class="cca-logo-button" alt="Logo of CCA Cambridge Certification Association"></a>
+            <a href="#"><img src="img/HTMLLevel1.png" class="cca-logo-button" alt="Logo of CCA Cambridge Certification Association"></a>
 
             <h3>CCS3</h3>
 
-            <a href="#" target="_blank"><img src="img/CSSLevel1.png" class="cca-logo-button" alt="Logo of CCA Cambridge Certification Association"></a>
+            <a href="#"><img src="img/CSSLevel1.png" class="cca-logo-button" alt="Logo of CCA Cambridge Certification Association"></a>
 
           </div>
 
