--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 
             <a href="#"><img src="img/HTMLLevel1.png" class="cca-logo-button" alt="Logo of CCA Cambridge Certification Association"></a>
 
-            <h3>CCS3</h3>
+            <h3>CSS3</h3>
 
             <a href="#"><img src="img/CSSLevel1.png" class="cca-logo-button" alt="Logo of CCA Cambridge Certification Association"></a>
 
