--- a/about.html
+++ b/about.html
@@ -1350,7 +1350,7 @@
     </div>
   </footer>
 
-  <script src="js/tota11y.min.js"></script>
+  <!-- <script src="js/tota11y.min.js"></script> -->
 </body>
 
 </html>
