--- a/work.html
+++ b/work.html
@@ -86,7 +86,7 @@
     </div>
   </footer>
 
-  <script src="js/tota11y.min.js"></script>
+  <!-- <script src="js/tota11y.min.js"></script> -->
 
 </body>
 
