Update portfolio with current projects

--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
   <meta charset="utf-8">
   <title>Johannes Kr&auml;mer</title>
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
 </head>
 
 <body>
   <header class="page-header">
     <div class="page-header__item">
-      <a href="./index.html"><img src="./img/Johannes-Kraemer-Logo.png" class="page-header_logo" alt="Johannes Kr&auml;mer logo with name in capital letters" /></a>
+      <a href="./index.html"><img src="./img/Johannes-Kraemer-Logo.png" class="page-header_logo"
+          alt="Johannes Kr&auml;mer logo with name in capital letters" /></a>
     </div>
     <!-- 'main-navigation' class missing in my nav element opposed to CF instructions -->
     <nav class="page-header__item">
@@ -60,9 +64,12 @@
     <!-- No deep links to social accounts implemented yet but colors tweaked manually to practice svg implementation -->
     <p>Find me <span class="socials-footer">@jkraemr</span> on</p>
     <div class="social-media">
-      <a href="https://github.com/jkraemr" target="_blank"><img src="./img/github-logo.svg" width="22" alt="GitHub Logo"></a>
-      <a href="https://www.linkedin.com/in/johannes-kraemer/" target="_blank"><img src="./img/linked-in-logo.svg" width="25" alt="LinkedIn Logo"></a>
-      <a href="https://twitter.com/jkraemr" target="_blank"><img src="./img/twitter-logo.svg" width="23" alt="Twitter Logo"></a>
+      <a href="https://github.com/jkraemr" target="_blank"><img src="./img/github-logo.svg" width="22"
+          alt="GitHub Logo"></a>
+      <a href="https://www.linkedin.com/in/johannes-kraemer/" target="_blank"><img src="./img/linked-in-logo.svg"
+          width="25" alt="LinkedIn Logo"></a>
+      <a href="https://twitter.com/jkraemr" target="_blank"><img src="./img/twitter-logo.svg" width="23"
+          alt="Twitter Logo"></a>
     </div>
   </footer>
 
