--- a/work.html
+++ b/work.html
@@ -6,15 +6,19 @@
   <meta charset="utf-8">
   <title>Work – Johannes Kr&auml;mer</title>
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
 </head>
 
 <body>
   <header class="page-header">
     <div class="page-header__item">
-      <a href="./index.html"><img src="./img/Johannes-Kraemer-Logo.png" class="page-header_logo" alt="Johannes Kr&auml;mer logo with name in capital letters" /></a>
+      <a href="./index.html"><img src="./img/Johannes-Kraemer-Logo.png" class="page-header_logo"
+          alt="Johannes Kr&auml;mer logo with name in capital letters" /></a>
     </div>
     <!-- 'main-navigation' class missing in my nav element opposed to CF instructions -->
     <nav class="page-header__item">
@@ -40,29 +44,47 @@
     <section class="work-main">
       <h1>Work</h1>
       <div class="work-grid">
+        <div class="work-grid__item pokedex-bg">
+          <h2>Pokedex App</h2>
+          <a href="https://github.com/jkraemr/pokedex-app" target="_blank"><img class="work-grid__image"
+              src="img/pokedex-app-1000.webp" width="222em" alt=""></a>
+          <p>Small web application with HTML, CSS, and JavaScript that loads a list of data from an external/public API
+            and enables the viewing of more details for a given data item on demand. </p>
+          <a href="https://github.com/jkraemr/pokedex-app" target="_blank">View on GitHub</a>
+          <br><br>
+          <a href="https://jkraemr.github.io/pokedex-app/" target="_blank">View Pokedex App</a>
+        </div>
         <div class="work-grid__item">
-          <h2>Project title</h2>
-          <p>Short description</p>
-          <a href="#">Link to project</a>
+          <h2>Music Movies API
+          </h2>
+          <p>The Music Movies API is the complete server-side component of the myMusicMovies web application providing
+            users with access to information about different music movies including details about genres, actors,
+            directors, artists, and more. Users will be able to sign up, update their personal information, and create a
+            list of their favorite music movies.</p>
+          <a href="https://github.com/jkraemr/music-movies-api" target="_blank">View on GitHub</a>
+        </div>
+        <div class="work-grid__item">
+          <h2>Music Movies Client</h2>
+          <p>The Music Movies Client React App is the client-side component of the myMusicMovies web application based
+            on its existing server-side code (REST API and database) using the MERN stack.</p>
+          <a href="https://github.com/jkraemr/music-movies-client-v2" target="_blank">View on GitHub</a>
+        </div>
+        <div class="work-grid__item">
+          <h2>meetFS App</h2>
+          <a href="https://github.com/jkraemr/meet-app" target="_blank"><img class="work-grid__image"
+              src="img/meet-app-1000.webp" width="222em" alt=""></a>
+          <p>The meetFS App is a serverless, progressive web application (PWA) built with React using test-driven (TDD)
+            and behaviour-driven development (BDD) approaches. The application accesses the Google Calendar API to fetch
+            upcoming events for full-stack web developers.</p>
+          <a href="https://github.com/jkraemr/meet-app" target="_blank">View on GitHub</a>
+          <br> <br>
+          <a href="https://jkraemr.github.io/meet-app/" target="_blank">View meetFS App</a>
         </div>
         <div class="work-grid__item">
           <h2>Project title</h2>
-          <p>Short description</p>
-          <a href="#">Link to project</a>
-        </div>
-        <div class="work-grid__item">
-          <h2>Project title</h2>
-          <p>Short description</p>
-          <a href="#">Link to project</a>
-        </div>
-        <div class="work-grid__item">
-          <h2>Project title</h2>
-          <p>Short description</p>
-          <a href="#">Link to project</a>
-        </div>
-        <div class="work-grid__item">
-          <h2>Project title</h2>
-          <p>Short description</p>
+          <p>The Meet App is a serverless, progressive web application (PWA) built with React using TDD and BDD
+            approaches. The application accesses the Google Calendar API to fetch upcoming events for full-stack web
+            developers.</p>
           <a href="#">Link to project</a>
         </div>
         <div class="work-grid__item">
@@ -80,9 +102,12 @@
     <!-- No deep links to social accounts implemented yet but colors tweaked manually to practice svg implementation -->
     <p>Find me <span class="socials-footer">@jkraemr</span> on</p>
     <div class="social-media">
-      <a href="https://github.com/jkraemr" target="_blank"><img src="./img/github-logo.svg" width="22" alt="GitHub Logo"></a>
-      <a href="https://www.linkedin.com/in/johannes-kraemer/" target="_blank"><img src="./img/linked-in-logo.svg" width="25" alt="LinkedIn Logo"></a>
-      <a href="https://twitter.com/jkraemr" target="_blank"><img src="./img/twitter-logo.svg" width="23" alt="Twitter Logo"></a>
+      <a href="https://github.com/jkraemr" target="_blank"><img src="./img/github-logo.svg" width="22"
+          alt="GitHub Logo"></a>
+      <a href="https://www.linkedin.com/in/johannes-kraemer/" target="_blank"><img src="./img/linked-in-logo.svg"
+          width="25" alt="LinkedIn Logo"></a>
+      <a href="https://twitter.com/jkraemr" target="_blank"><img src="./img/twitter-logo.svg" width="23"
+          alt="Twitter Logo"></a>
     </div>
   </footer>
 
