Update contact page

--- a/contact.html
+++ b/contact.html
@@ -6,15 +6,19 @@
   <meta charset="utf-8">
   <title>Contact – Johannes Kr&auml;mer</title>
   <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
 </head>
 
 <body>
   <header class="page-header">
     <div class="page-header__item">
-      <a href="./index.html"><img src="./img/Johannes-Kraemer-Logo.png" class="page-header_logo" alt="Johannes Kr&auml;mer logo with name in capital letters" /></a>
+      <a href="./index.html"><img src="./img/Johannes-Kraemer-Logo.png" class="page-header_logo"
+          alt="Johannes Kr&auml;mer logo with name in capital letters" /></a>
     </div>
     <!-- 'main-navigation' class missing in my nav element opposed to CF instructions -->
     <nav class="page-header__item">
@@ -46,22 +50,27 @@
           <!-- <img class="contact-img" src="./img/adam-solomon-WHUDOzd5IYU-unsplash.jpg" width="220" alt="Speaking bubble saying 'Hello'" />
            <figcaption>Photo credits: <a href="https://unsplash.com/photos/WHUDOzd5IYU" target="_blank">Unsplash</a></figcaption> -->
 
-           <h2>Let's talk!</h2>
+          <h2>Let's talk!</h2>
 
-          <p>Feel free to get in touch via the contact form, <br>give me a call via <a href="tel:+4912358132134">Phone</a> or <a href="skype:johannes.kraemer.">Skype</a>, <br>or just <a
-              href="mailto:me@myjunk.mail?cc=cc@copymail.org&bcc=bcc@abc.xy&?subject=My%20subject&body=Hello%20Johannes%20aka%20John%20Doe%2C%0D%0A%0D%0AHere%20goes%20my%20email.%0D%0A%0D%0AKind%20regards%2C%0D%0AJane%20Doe">send me an Email</a>.</p>
+          <p>Feel free to give me a call on <a href="skype:johannes.kraemer.">Skype</a>, or just send me a message
+            via <a href="mailto:johannes.kraemer@hotmail.com?&subject=Project%20request
+            &body=Hello%20Johannes%20Kraemer," target="_blank">Email</a> or <a
+              href="https://www.linkedin.com/in/johannes-kraemer/" target="_blank">LinkedIn</a>.</p>
 
           <div class="contact-x">
-            <p>Phone: <a href="tel:+4912358132134">Call +49-123-58132134</a></p>
             <p>Skype: <a href="skype:johannes.kraemer.">johannes.kraemer.</a></p>
-            <p>E-Mail: <a
-                href="mailto:me@myjunk.mail?cc=cc@copymail.org&bcc=bcc@abc.xy&?subject=My%20subject&body=Hello%20Johannes%20aka%20John%20Doe%2C%0D%0A%0D%0AHere%20Goes%20my%20email.%0D%0A%0D%0AKind%20regards%2C%0D%0AJane%20Doe">me@myjunk.mail</a>
+            <p>Email: <a href="mailto:johannes.kraemer@hotmail.com?&subject=Project%20request
+              &body=Hello%20Johannes%20Kraemer," target="_blank">johannes.kraemer@hotmail.com</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/johannes-kraemer/"
+                target="_blank">linkedin.com/in/johannes-kraemer</a>
             </p>
-            <p>I look forward to hear from you.</p>
+            <p>I look forward to hear from you!</p>
           </div>
         </div>
         <div class="contact-grid__item">
-          <form action="#" method="POST">
+
+          <h2>Let's connect!</h2>
+          <!-- <form action="#" method="POST">
             <h2>Contact form</h2>
             <label for="first-name">First name</label>
             <input type="text" id="first-name" name="first-name" value=""><br>
@@ -72,10 +81,19 @@
             <label for="tel">Phone</label>
             <input type="tel" id="tel" name="tel" value=""><br>
             <label for="message">Your message<span style="font-size:small;"> (maximum 250 characters)</span>*</label>
-            <textarea id="message" name="message" rows="8" cols="40" maxlength="250" placeholder="Please type here ..." required></textarea><br>
+            <textarea id="message" name="message" rows="8" cols="40" maxlength="250" placeholder="Please type here ..."
+              required></textarea><br>
             <input type="submit" value="Send" class="contact-form__submit-button">
             <p style="font-size:small;">(*) Please fill out all fields marked as required.</p>
-          </form>
+          </form> -->
+
+          <div class="social-media">
+            <a href="https://github.com/jkraemr" target="_blank">Connect via GitHub</a>
+            <br><br>
+            <a href="https://www.linkedin.com/in/johannes-kraemer/" target="_blank">Connect via LinkedIn</a>
+            <br><br>
+            <a href="https://twitter.com/jkraemr" target="_blank">Connect via Twitter</a>
+          </div>
         </div>
       </div>
 
@@ -99,9 +117,12 @@
     <!-- No deep links to social accounts implemented yet but colors tweaked manually to practice svg implementation -->
     <p>Find me <span class="socials-footer">@jkraemr</span> on</p>
     <div class="social-media">
-      <a href="https://github.com/jkraemr" target="_blank"><img src="./img/github-logo.svg" width="22" alt="GitHub Logo"></a>
-      <a href="https://www.linkedin.com/in/johannes-kraemer/" target="_blank"><img src="./img/linked-in-logo.svg" width="25" alt="LinkedIn Logo"></a>
-      <a href="https://twitter.com/jkraemr" target="_blank"><img src="./img/twitter-logo.svg" width="23" alt="Twitter Logo"></a>
+      <a href="https://github.com/jkraemr" target="_blank"><img src="./img/github-logo.svg" width="22"
+          alt="GitHub Logo"></a>
+      <a href="https://www.linkedin.com/in/johannes-kraemer/" target="_blank"><img src="./img/linked-in-logo.svg"
+          width="25" alt="LinkedIn Logo"></a>
+      <a href="https://twitter.com/jkraemr" target="_blank"><img src="./img/twitter-logo.svg" width="23"
+          alt="Twitter Logo"></a>
     </div>
   </footer>
 
