Update work page

--- a/work.html
+++ b/work.html
@@ -45,11 +45,22 @@
       <h1>Work</h1>
       <div class="work-grid">
         <div class="work-grid__item pokedex-bg">
+          <h2>Portfolio Website</h2>
+          <a href="https://github.com/jkraemr/pokedex-app" target="_blank"><img class="work-grid__image"
+              src="img/jkraemr-01-portfolio-website-screenshot-1000-2204100300.webp" width="222em" alt=""></a>
+          <p>Responsive website using pure HTML and CSS showcasing the projects built throughout the CareerFoundry
+            Full-Stack
+            Web Development Program. </p>
+          <a href="https://github.com/jkraemr/portfolio-website" target="_blank">View on GitHub</a>
+          <br><br>
+          <a href="https://jkraemr.github.io/portfolio-website/">View Portfolio Website</a>
+        </div>
+        <div class="work-grid__item pokedex-bg">
           <h2>Pokedex App</h2>
           <a href="https://github.com/jkraemr/pokedex-app" target="_blank"><img class="work-grid__image"
-              src="img/pokedex-app-1000.webp" width="222em" alt=""></a>
-          <p>Small web application with HTML, CSS, and JavaScript that loads a list of data from an external/public API
-            and enables the viewing of more details for a given data item on demand. </p>
+              src="img/jkraemr-02-pokedex-app-1000.webp" width="222em" alt=""></a>
+          <p>Small web application built with HTML, CSS, and JavaScript that loads a list of data from an
+            external/public API and enables the viewing of more details for a given data item on demand. </p>
           <a href="https://github.com/jkraemr/pokedex-app" target="_blank">View on GitHub</a>
           <br><br>
           <a href="https://jkraemr.github.io/pokedex-app/" target="_blank">View Pokedex App</a>
@@ -57,22 +68,32 @@
         <div class="work-grid__item">
           <h2>Music Movies API
           </h2>
-          <p>The Music Movies API is the complete server-side component of the myMusicMovies web application providing
-            users with access to information about different music movies including details about genres, actors,
-            directors, artists, and more. Users will be able to sign up, update their personal information, and create a
+          <a href="https://github.com/jkraemr/music-movies-api" target="_blank"><img class="work-grid__image"
+              src="img/jkraemr-03-music-movies-api-screenshot-1000-2204100335.webp" width="222em" alt=""></a>
+          <p>The RESTful Music Movies API is the complete server-side component of the myMusicMovies web
+            applications built using the MERN or MEAN stack. The Music Movies API provides users with access to details
+            about music movies including respective genres and directors. Users will be able to sign up, update their
+            personal
+            information, and create a
             list of their favorite music movies.</p>
           <a href="https://github.com/jkraemr/music-movies-api" target="_blank">View on GitHub</a>
+          <br><br>
+          <a href="https://mymusicmovies.herokuapp.com/documentation.html" target="_blank">View Documentation</a>
         </div>
         <div class="work-grid__item">
-          <h2>Music Movies Client</h2>
-          <p>The Music Movies Client React App is the client-side component of the myMusicMovies web application based
-            on its existing server-side code (REST API and database) using the MERN stack.</p>
+          <h2>Music Movies React Client</h2>
+          <a href="https://github.com/jkraemr/music-movies-client-v2" target="_blank"><img class="work-grid__image"
+              src="img/jkraemr-04-music-movies-react-client-screenshot-1000-2204122352.webp" width="222em" alt=""></a>
+          <p>The Music Movies React Client is the frontend component of the myMusicMovies web application based on its
+            existing server-side code (RESTful Music Movies API and database) using the MERN stack.</p>
           <a href="https://github.com/jkraemr/music-movies-client-v2" target="_blank">View on GitHub</a>
+          <br><br>
+          <a href="https://mymusicmovies.netlify.app" target="_blank">View Music Movies React Client</a>
         </div>
         <div class="work-grid__item">
           <h2>meetFS App</h2>
           <a href="https://github.com/jkraemr/meet-app" target="_blank"><img class="work-grid__image"
-              src="img/meet-app-1000.webp" width="222em" alt=""></a>
+              src="img/jkraemr-05-music-movies-angular-client-screenshot-1000.webp" width="222em" alt=""></a>
           <p>The meetFS App is a serverless, progressive web application (PWA) built with React using test-driven (TDD)
             and behaviour-driven development (BDD) approaches. The application accesses the Google Calendar API to fetch
             upcoming events for full-stack web developers.</p>
@@ -81,16 +102,31 @@
           <a href="https://jkraemr.github.io/meet-app/" target="_blank">View meetFS App</a>
         </div>
         <div class="work-grid__item">
-          <h2>Project title</h2>
-          <p>The Meet App is a serverless, progressive web application (PWA) built with React using TDD and BDD
-            approaches. The application accesses the Google Calendar API to fetch upcoming events for full-stack web
-            developers.</p>
-          <a href="#">Link to project</a>
+          <h2>Music Movies Angular Client</h2>
+          <a href="https://jkraemr.github.io/music-movies-Angular-client" target="_blank"><img class="work-grid__image"
+              src="img/jkraemr-07-music-movies-angular-client-screenshot-1000-2204130026.webp" width="222em" alt=""></a>
+          <p>The Music Movies Angular Client is the frontend component of the myMusicMovies web application based on its
+            existing server-side code (RESTful Music Movies API and database) using the MEAN stack.</p>
+          <a href="https://github.com/jkraemr/music-movies-Angular-client" target="_blank">View on GitHub</a>
+          <br> <br>
+          <a href="https://jkraemr.github.io/music-movies-Angular-client" target="_blank">View Music Movies Angular
+            Client</a>
         </div>
         <div class="work-grid__item">
-          <h2>Big Project</h2>
-          <p>Short description</p>
-          <a href="#">Link to project</a>
+          <h2>Chat App</h2>
+          <a href="https://github.com/jkraemr/chat-app" target="_blank"><img class="work-grid__image"
+              src="img/jkraemr-06-chat-app-screenshot-1000-2204130148.webp" width="222em" alt=""></a>
+          <a href="https://github.com/jkraemr/chat-app" target="_blank"><img class="work-grid__image"
+              src="img/jkraemr-06-chat-app-screenshot-1000-2204181827.webp" width="222em" alt=""></a>
+          <a href="https://github.com/jkraemr/chat-app" target="_blank"><img class="work-grid__image"
+              src="img/jkraemr-06-chat-app-screenshot-1000-2204181822.webp" width="222em" alt=""></a>
+          <p>The Chat App is a mobile application providing users with a chat interface and options to share images and
+            their location. The Chat App is built with React Native, a framework for building Android and iOS apps that
+            only requires one codebase.</p>
+          <a href="https://github.com/jkraemr/chat-app" target="_blank">View on GitHub</a>
+          <br> <br>
+          <img src="img/App-Store-Badges.webp" width="350em" alt="">
+          <p>(Apple App Store & Google Play Store availability coming soon)</p>
         </div>
 
       </div>
