Update about and contact page

--- a/about.html
+++ b/about.html
@@ -68,6 +68,16 @@
             <a href="img/CareerFoundry_Certificate_Johannes_Kraemer_Frontend_Development.pdf" target="_blank"><img
                 src="img/CareerFoundry_Certificate_Johannes_Kraemer_Frontend_Development-Badge-2204182000.webp"
                 class="cca-logo-button" alt="Logo of CareerFoundry Intro to Frontend Development Course"></a>
+            <ul class="ul-qualifications">
+              <li>HTML and CSS</li>
+              <li>Web Accessibility</li>
+              <li>CSS Grid and Flexbox</li>
+              <li>CSS Animations and Transitions</li>
+              <li>Responsive Web Design</li>
+              <li>Git and Version Control</li>
+              <li>Cross-Browser Testing and Debugging</li>
+              <li>Web Hosting</li>
+            </ul>
 
             <h3>Full-Stack Development</h3>
 
