--- a/contact.html
+++ b/contact.html
@@ -92,6 +92,8 @@
             <br><br>
             <a href="https://www.linkedin.com/in/johannes-kraemer/" target="_blank">Connect via LinkedIn</a>
             <br><br>
+            <a href="https://medium.com/@johannes.kraemer" target="_blank">Connect via Medium</a>
+            <br><br>
             <a href="https://twitter.com/jkraemr" target="_blank">Connect via Twitter</a>
           </div>
         </div>
