--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 
           <h2>Qualifications</h2>
 
-          <p>I am an aspiring <em>full-stack </em> web developer based in Berlin, Germany, with a background in
+          <p>I am a <em>full-stack </em> web developer based in Berlin, Germany, with a background in
             marketing, product management & communications in the audiophile, pro audio, and music tech industry.</p>
 
           <div class="about-qualifications">
@@ -90,7 +90,7 @@
 
           <br><br>
 
-          <a href="img/Johannes-Kraemer-Resume-Short.pdf" target="_blank" id="button">Download my full resume</a>
+          <a href="#" target="_blank" id="button">Download my full resume</a>
         </div>
         <div class="about-flex__item">
           <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="auto"
